<resources>
    <string name="app_name">Vocabulary App</string>
    <string name="action_settings">Settings</string>
    <string name="action_generate_list"> Generate List </string>

    <string name="action_sort_by_favorites"> Favorites </string>
    <string name="action_sort_by"> Menu : </string>
    <string name="title_activity_detail">Word Details</string>
    <string name="saved_favorite_key" translatable="true">favorite</string>
    <string name="content_authority">com.example.sanch.myapplication</string>
    <string name="added_to_favorites" translatable="true">Added to Favorites</string>
    <string name="already_in_favorites" translatable="true">Already in Favorites</string>
    <string name="delete_the_word" translatable="true">"Deleted from Favorites</string>
    <string name="favorite_List_empty" translatable="true"> Favorite List is empty</string>
    <string name="favorite_List_Click" translatable="true"> Click on Flash Card</string>
    <string name="search_hint" translatable="true">Enter a word here</string>
    <string name="audio" translatable="true">Listen to the Pronunciation</string>
    <string name="fav_word" translatable="true">My Favorite word </string>
    <string name="interstitial_full_screen">ca-app-pub-7811279321788693/5495483164</string>
    <string name="myAlphaText">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <!-- Screen names-->
    <string name="screen_name1">Vocabulary FlashCards</string>
    <string name="screen_name2">Meanings and Definitions</string>

    <!-- Floating buttons -->
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>

    <!-- buttons -->
    <string name="audio_msg">Click to hear the audio</string>
    <string name="wiki"> Search Wikipedia</string>
    <string name="google">Search Google</string>
    <string name="favorite">Mark as Favorite</string>
    <string name="delete_favorite">Delete It</string>

    <!--widget-->
    <string name="widget_title">FlashCard of the Day</string>

    <string name="empty_list_no_network" translatable="true"> Please check the Network Connectivity.</string>
    <string name="err_network" translatable="true">Error: No Internet connection detected.</string>
    <string name="err_retrieving" translatable="true">Error retrieving definition.</string>
    <string name="err_no_email_client" translatable="true">There are no email clients installed.</string>
    <string name="err_suggestion" translatable="true">No matches found. Did you mean:</string>

    <string name="email_subject" translatable="true">Vocabulary -- Feedback</string>
    <string name="email_title" translatable="true">Send Feedback</string>
    <string name="email_text" translatable="true">Text goes here</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="wotd_notification_title_template">Wotd: %1$s</string>

   </resources>
